@@ -12,9 +12,6 @@ server:
 stub-zone:
 	name: "example.net"
 	stub-addr: "127.0.0.1@@STUB2_PORT@"
-stub-zone:
-	name: "example.com"
-	stub-addr: "127.0.0.1@@STUB2_PORT@"
 # a k a root hints
 stub-zone:
 	name: "."
