@@ -1,15 +1,0 @@
-server:
-	verbosity: 2
-	# num-threads: 1
-	interface: 127.0.0.1
-	port: @PORT@
-	use-syslog: no
-	directory: ""
-	pidfile: "unbound.pid"
-	chroot: ""
-	username: ""
-	do-not-query-localhost: no
-forward-zone:
-	name: "."
-	forward-addr: "127.0.0.1@@TOPORT@"
-
